--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -7,16 +7,19 @@
       xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
 
     <h:head>
-        <title>Simple Order</title>
+        <title>Transaction Simulator - Simple Order</title>
     </h:head>
     <h:body>
-        <h1>Simple Order</h1>
+        <h1>Transaction Simulator - Simple Order</h1>
         <form jsf:id="form">
             <p>
-                <input jsf:id='name' type='text' jsf:value='#{itemOrderBean.name}' />
+                name:<input jsf:id='name' type='text' jsf:value='#{itemOrderBean.name}' />
             </p>
             <p>
-                <input jsf:id='price' type='text' jsf:value='#{itemOrderBean.price}' />
+                price:<input jsf:id='price' type='text' jsf:value='#{itemOrderBean.price}' />
+            </p>
+            <p>
+                user:<input jsf:id='user' type='text' jsf:value='#{itemOrderBean.user}' />
             </p>
             <button jsf:action="#{itemOrderBean.doOrder}">Order</button>
         </form>
@@ -24,7 +27,7 @@
             <ul>
                 <li jsfc="ui:repeat" value="#{itemOrderBean.itemOrders}"
                     var="order" varStatus="stat"  >
-                    #{stat.index}. #{order.name}:#{order.price} #{order.createdAt}
+                    #{stat.index}. #{order.name}:#{order.price} #{order.createdAt} by #{order.userName}
                 </li>
             </ul>
         </p>
