--- a/src/main/webapp/push-client.html
+++ b/src/main/webapp/push-client.html
@@ -37,18 +37,15 @@
         </script>        
     </head>
     <body>
-        <h1>WebSocketテスト</h1>
+        <h1>Push Notification Client</h1>
         <div>
             <h3>Login</h3>
             User:<input id="user" type="text"/>
             <button id="login">Login</button>
-        </div>   
-        <div>
-            <h3>Simple Chat</h3>
+
+            <h3>Log</h3>
             <div id="log">
             </div>
-            <input id="msg" type="text"/>
-            <button id="send">送信</button>
         </div>
     </body>
 </html>
